# preference_opt

./: Cargo.toml  README.md  asset-manifest.json  index.html
examples/: interactive_optimization.rs
preference-opt-wasm/: Cargo.toml
preference-opt-wasm/src/: lib.rs
preference-opt-wasm/tests/: web.rs
preference-opt-web/: package-lock.json  package.json  tailwind.config.js
preference-opt-web/public/: index.html
preference-opt-web/src/: App.tsx  index.css  store.ts  utils.ts
preference-opt-web/src/components/: BestSampleView.tsx  Intro.tsx  SampleDataView.tsx  SampleSelector.tsx  SampleView.tsx
preference_opt/: Cargo.toml
preference_opt/examples/: interactive_optimization.rs
preference_opt/src/: acquisition.rs  kernels.rs  optimization.rs  posterior.rs  structures.rs
src/: kernels.rs  lbfgs_opt.rs  lib.rs  optimization.rs  posterior.rs  structures.rs
static/css/: 3.28b1de30.chunk.css  3.28b1de30.chunk.css.map
static/js/: 2.c405ce71.chunk.js  2.c405ce71.chunk.js.map  3.9cc2e8d2.chunk.js  3.9cc2e8d2.chunk.js.map  3.af1abef2.chunk.js  3.af1abef2.chunk.js.map  4.79568e26.chunk.js  4.79568e26.chunk.js.map  main.9ed4782f.chunk.js  main.9ed4782f.chunk.js.map  runtime-main.2f5459fd.js  runtime-main.2f5459fd.js.map  runtime-main.55d84703.js  runtime-main.55d84703.js.map  runtime-main.7839afe0.js  runtime-main.7839afe0.js.map  runtime-main.95c074eb.js  runtime-main.95c074eb.js.map
tests/: sum_opt.rs
