[package]
name = "preference_opt"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25.3"
thiserror = "1.0.24"
anyhow = "1.0.38"
itertools = "0.10.0"
statrs = "0.13.0"
rand = "0.8.3"
lbfgs = "0.2.1"
optimization = "0.2.0"
dialoguer = "0.8.0"

[dev-dependencies]
approx = "0.4.0"
clap = "3.0.0-beta.2"
